jlucaso1.whatsapp-rust-node.e85c32b17f2451e35a3a86d2e5383ae8293a2cd0
Running as unit: run-p2202817-i14782925.scope; invocation ID: 08536419f422441bbd5a73d503127f14
    Blocking waiting for file lock on package cache
   Compiling proc-macro2 v1.0.103
   Compiling unicode-ident v1.0.22
   Compiling quote v1.0.42
    Checking cfg-if v1.0.4
   Compiling serde_core v1.0.228
   Compiling libc v0.2.178
   Compiling typenum v1.19.0
   Compiling version_check v0.9.5
   Compiling serde v1.0.228
    Checking subtle v2.6.1
   Compiling generic-array v0.14.7
   Compiling either v1.15.0
   Compiling shlex v1.3.0
   Compiling find-msvc-tools v0.1.6
    Checking pin-project-lite v0.2.16
   Compiling anyhow v1.0.100
   Compiling cc v1.2.51
    Checking bytes v1.11.0
   Compiling syn v2.0.111
    Checking log v0.4.29
   Compiling fastrand v2.3.0
    Checking crypto-common v0.1.7
   Compiling crossbeam-utils v0.8.21
    Checking block-buffer v0.10.4
   Compiling itertools v0.14.0
    Checking cpufeatures v0.2.17
   Compiling heck v0.5.0
   Compiling getrandom v0.3.4
    Checking digest v0.10.7
   Compiling semver v1.0.27
   Compiling rustix v1.1.3
    Checking futures-core v0.3.31
    Checking block-padding v0.3.3
   Compiling hashbrown v0.16.1
   Compiling regex-syntax v0.8.8
   Compiling bitflags v2.10.0
   Compiling zerocopy v0.8.31
   Compiling equivalent v1.0.2
    Checking memchr v2.7.6
   Compiling linux-raw-sys v0.11.0
   Compiling indexmap v2.12.1
    Checking inout v0.1.4
    Checking itoa v1.0.16
   Compiling siphasher v1.0.1
   Compiling fixedbitset v0.5.7
   Compiling regex-automata v0.4.13
   Compiling once_cell v1.21.3
   Compiling phf_shared v0.13.1
   Compiling petgraph v0.7.1
    Checking cipher v0.4.4
   Compiling rustc_version v0.4.1
   Compiling ring v0.17.14
   Compiling tempfile v3.24.0
   Compiling autocfg v1.5.0
   Compiling regex v1.12.2
   Compiling parking_lot_core v0.9.12
   Compiling serde_json v1.0.147
   Compiling multimap v0.10.1
   Compiling num-traits v0.2.19
   Compiling curve25519-dalek v4.1.3
    Checking ppv-lite86 v0.2.21
   Compiling phf_generator v0.13.1
    Checking rand_core v0.9.3
    Checking concurrent-queue v2.5.0
    Checking universal-hash v0.5.1
    Checking scopeguard v1.2.0
    Checking parking v2.2.1
    Checking opaque-debug v0.3.1
    Checking futures-sink v0.3.31
   Compiling crc32fast v1.5.0
    Checking smallvec v1.15.1
   Compiling zmij v0.1.9
    Checking polyval v0.6.2
   Compiling serde_derive v1.0.228
   Compiling zeroize_derive v1.4.2
   Compiling prost-derive v0.14.1
   Compiling curve25519-dalek-derive v0.1.1
    Checking zeroize v1.8.2
    Checking rustls-pki-types v1.13.2
   Compiling tokio-macros v2.6.0
    Checking rand_chacha v0.9.0
    Checking event-listener v5.4.1
    Checking lock_api v0.4.14
   Compiling phf_codegen v0.13.1
    Checking hmac v0.12.1
    Checking socket2 v0.6.1
    Checking mio v1.1.1
    Checking getrandom v0.2.16
   Compiling thiserror v2.0.17
   Compiling thiserror v1.0.69
    Checking zlib-rs v0.5.5
   Compiling prost v0.14.1
   Compiling strsim v0.11.1
    Checking untrusted v0.9.0
   Compiling prost-types v0.14.1
   Compiling fnv v1.0.7
   Compiling ident_case v1.0.1
   Compiling darling_core v0.21.3
    Checking libz-rs-sys v0.5.5
    Checking tokio v1.48.0
   Compiling prost-build v0.14.1
    Checking event-listener-strategy v0.5.4
    Checking rand v0.9.2
   Compiling waproto v0.2.0 (https://github.com/jlucaso1/whatsapp-rust#f61297b4)
   Compiling wacore-binary v0.2.0 (https://github.com/jlucaso1/whatsapp-rust#f61297b4)
    Checking ghash v0.5.1
   Compiling thiserror-impl v1.0.69
   Compiling derive_more-impl v2.1.1
   Compiling thiserror-impl v2.0.17
    Checking aes v0.8.4
    Checking ctr v0.9.2
    Checking uuid v1.19.0
    Checking aead v0.5.2
    Checking iana-time-zone v0.1.64
    Checking rand_core v0.6.4
   Compiling rustls v0.23.35
    Checking base64 v0.22.1
   Compiling httparse v1.10.1
    Checking x25519-dalek v2.0.1
    Checking chrono v0.4.42
    Checking aes-gcm v0.10.3
    Checking flate2 v1.1.5
   Compiling darling_macro v0.21.3
    Checking derive_more v2.1.1
    Checking rustls-webpki v0.103.8
    Checking phf v0.13.1
    Checking hkdf v0.12.4
    Checking parking_lot v0.12.5
   Compiling async-trait v0.1.89
   Compiling displaydoc v0.2.5
   Compiling futures-macro v0.3.31
    Checking futures-channel v0.3.31
    Checking cbc v0.1.2
    Checking sha2 v0.10.9
    Checking sha1 v0.10.6
   Compiling vcpkg v0.2.15
    Checking slab v0.4.11
   Compiling protobuf v3.7.2
    Checking hex v0.4.3
    Checking arrayref v0.3.9
   Compiling pkg-config v0.3.32
    Checking pin-utils v0.1.0
    Checking futures-io v0.3.31
    Checking futures-task v0.3.31
   Compiling winnow v0.7.14
    Checking futures-util v0.3.31
   Compiling libsqlite3-sys v0.35.0
   Compiling darling v0.21.3
    Checking protobuf-support v3.7.2
    Checking serde-big-array v0.5.1
    Checking http v1.4.0
   Compiling serde_spanned v1.0.4
   Compiling toml_datetime v0.7.5+spec-1.1.0
   Compiling diesel_derives v2.3.6
   Compiling dtor-proc-macro v0.0.6
   Compiling toml_parser v1.0.6+spec-1.1.0
   Compiling dsl_auto_type v0.2.0
   Compiling toml v0.9.10+spec-1.1.0
    Checking scheduled-thread-pool v0.2.7
    Checking async-channel v2.5.0
    Checking pbkdf2 v0.12.2
   Compiling diesel_table_macro_syntax v0.3.0
   Compiling napi-build v2.3.1
    Checking md5 v0.8.0
   Compiling migrations_internals v2.3.0
    Checking r2d2 v0.8.10
    Checking webpki-roots v1.0.4
   Compiling portable-atomic v1.12.0
    Checking downcast-rs v2.0.2
   Compiling ctor-proc-macro v0.0.7
   Compiling virtue v0.0.18
   Compiling migrations_macros v2.3.0
    Checking tokio-rustls v0.26.4
    Checking ureq-proto v0.5.3
    Checking tokio-util v0.7.17
   Compiling bincode_derive v2.0.1
    Checking simdutf8 v0.1.5
    Checking unty v0.0.4
    Checking percent-encoding v2.3.2
   Compiling unicode-segmentation v1.12.0
    Checking utf-8 v0.7.6
    Checking ureq v3.1.4
    Checking bincode v2.0.1
   Compiling convert_case v0.10.0
    Checking tokio-websockets v0.13.0
   Compiling napi v3.7.1
    Checking futures-executor v0.3.31
   Compiling dtor v0.1.1
    Checking async-lock v3.4.2
    Checking crossbeam-channel v0.5.15
    Checking crossbeam-epoch v0.9.18
    Checking env_filter v0.1.4
    Checking libloading v0.9.0
    Checking hashbrown v0.14.5
    Checking tagptr v0.2.0
    Checking napi-sys v3.2.1
    Checking env_logger v0.11.8
    Checking moka v0.12.12
    Checking ctor v0.6.3
    Checking futures v0.3.31
   Compiling napi-derive-backend v4.0.1
    Checking dashmap v6.1.0
   Compiling whatsapp-rust-node v0.1.0 (/tmp/nix-shell.uUVugk/jlucaso1_whatsapp-rust-node_i8nzbjod)
    Checking rustc-hash v2.1.1
    Checking nohash-hasher v0.2.0
   Compiling napi-derive v3.4.1
    Checking diesel v2.3.5
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.3.5/src/query_builder/ast_pass.rs:228:51
    |
228 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

    Checking wacore-libsignal v0.2.0 (https://github.com/jlucaso1/whatsapp-rust#f61297b4)
    Checking wacore-appstate v0.2.0 (https://github.com/jlucaso1/whatsapp-rust#f61297b4)
    Checking wacore v0.2.0 (https://github.com/jlucaso1/whatsapp-rust#f61297b4)
For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
